# ytdl

./: .gitignore  LICENSE  README.md  pyproject.toml  report.md  requirements.txt  ytdl
.github/workflows/: build.yml
src/ytdl/: __init__.py  __main__.py  cli.py  config.py  core.py  display.py  shortcuts.py  tui.py
